kubectl_deploy/development/ingress-live.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dex-ian-dotnet-test-ingress-live
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: dex-ian-dotnet-test-ingress-live-dex-ian-dotnet-test-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
    - hosts:
      - dex-ian-dotnet-test-development.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: dex-ian-dotnet-test-development.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - path: /
          backend:
            serviceName: dex-ian-dotnet-test-service
            servicePort: 5000
